ensures sidebar doesn't collapse smaller than it should

--- a/pattern_library/static/pattern_library/src/scss/layout/_main.scss
+++ b/pattern_library/static/pattern_library/src/scss/layout/_main.scss
@@ -1,5 +1,5 @@
 .main {
-    flex-grow: 1;
+    flex: 1;
     padding: 20px;
     background: $white;
     overflow: scroll;
